kubernetes/schmapps/monitoring/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-admin-ingressgateway
      namespace: ingress
  hostnames: ["alertmanager.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
